--- a/src/main/resources/templates/boardlist.html
+++ b/src/main/resources/templates/boardlist.html
@@ -29,7 +29,11 @@
       <tbody>
         <tr th:each="board : ${list}">
           <td th:text="${board.getId()}">1</td>
-          <td th:text="${board.title}">제목입니다.</td>
+          <td>
+            <a th:text="${board.title}" th:href="@{/board/view(id=${board.id})}">
+            제목입니다.
+            </a>
+          </td>
         </tr>
       </tbody>
     </table>
