--- a/src/main/resources/templates/boardlist.html
+++ b/src/main/resources/templates/boardlist.html
@@ -37,6 +37,11 @@
         </tr>
       </tbody>
     </table>
+<!--    굳이 태그로 감쌀 필요가 없는 부분-->
+    <th:block th:each="page : ${#numbers.sequence(startPage, endPage)}">
+      <a th:if="${page != nowPage}" th:href="@{/board/list(page = ${page - 1})}" th:text="${page}"></a>
+      <strong th:if="${page == nowPage}" th:text="${page}" style="color: red"></strong>
+    </th:block>
 
   </div>
 
